bankapps/bankapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: apps
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: bankapp
    version: blue # This can be changed to "green" when switching traffic
